kubernetes/namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: arenax
  labels:
    name: arenax
